Updated to use H2 by default. closes #1

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,7 +1,7 @@
 guice.modules=["com.ascotrobot.kue.Module"]
 
 db.default {
-  driver=com.mysql.jdbc.Driver
+  driver=org.h2.Driver
   url=${WIDGET_DB_URL}
   username=${WIDGET_DB_USERNAME}
   password=${WIDGET_DB_PASSWORD}
