--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ buildscript {
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.0.1"
         classpath "gradle.plugin.org.kt3k:ebean-enhance-plugin:2.0.5"
+        classpath "com.h2database:h2:1.4.191"
     }
 }
 
@@ -36,8 +37,8 @@ dependencies {
     compile "com.jolbox:bonecp:0.8.0.RELEASE"
     compile "com.typesafe:config:1.3.0"
     compile "com.google.inject:guice:4.0"
-    compile "mysql:mysql-connector-java:5.1.36"
     compile "com.fasterxml.jackson.core:jackson-databind:2.8.0"
+    compile "com.h2database:h2:1.4.191"
     testCompile "junit:junit:4.11"
 }
 
@@ -51,20 +52,25 @@ flyway {
     password = "$System.env.WIDGET_DB_PASSWORD"
 }
 
-task run(dependsOn: [':build', ':flywayMigrate']) {
+task kill() {
+    def runningPidFile = new File("./RUNNING_PID")
+    if (runningPidFile.exists()) {
+        def pid = runningPidFile.readLines()[0]
+        "kill $pid".execute()
+    }
+}
+
+task run(dependsOn: [':build', ':kill', ':flywayMigrate']) {
+    flywayMigrate.mustRunAfter kill
     def classpath = sourceSets.main.runtimeClasspath.getFiles().collect {it.getAbsolutePath()}.join(':')
     doLast {
-        def runningPidFile = new File("./RUNNING_PID")
-        if (runningPidFile.exists()) {
-            def pid = runningPidFile.readLines()[0]
-            "kill $pid".execute()
-        }
         Thread.start {
             def proc = "java -cp $classpath $mainClass".execute()
             Gradle.addShutdownHook {
                 proc.destroy()
             }
             if (proc in UNIXProcess) {
+                def runningPidFile = new File("./RUNNING_PID")
                 runningPidFile.write(proc.pid.toString())
             }
             Thread.start { printStream(proc.inputStream) }
@@ -72,6 +78,7 @@ task run(dependsOn: [':build', ':flywayMigrate']) {
         }
     }
 }
+
 
 def printStream(InputStream is) {
     def bytes = new byte[32]
